Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-9158

sanity-quota, test_12b: rebalancing failed

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.11.0, Lustre 2.10.4
    • Lustre 2.10.0, Lustre 2.11.0
    • None
    • trevis-46vm1/2/3/7/8, Full Group test w/DNE,
      RHEL7.3/zfs, branch master, v2.9.53.19.gdad9ce4, b3534
    • 3
    • 9223372036854775807

      https://testing.hpdd.intel.com/test_sets/5fc29140-f92a-11e6-aa39-5254006e85c2

      From test_log:

      Disk quotas for user quota_usr (uid 60000):
           Filesystem  kbytes   quota   limit   grace   files   quota   limit   grace
          /mnt/lustre       0       0       0       - 18446744073709551615       0       0       -
      lustre-MDT0000_UUID
                            0       -       0       - 18446744073709551615       -       0       -
      lustre-MDT0001_UUID
                            0       -       0       -       0       -       0       -
      lustre-MDT0002_UUID
                            0       -       0       -       0       -       0       -
      lustre-MDT0003_UUID
                            0       -       0       -       0       -       0       -
      

            hongchao.zhang Hongchao Zhang
            jcasper James Casper (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: